--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "mqtt": "^4.3.7"
+    "mqtt": "^4.3.7",
+    "yarn": "^1.22.18"
   }
 }
