--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --watch \"./\" --ext \"ts,json\" --exec \"ts-node estacao.ts\"",
     "lixeira": "nodemon --watch \"./\" --ext \"ts,json\" --exec \"ts-node lixeira.ts\"",
     "caminhao": "nodemon --watch \"./\" --ext \"ts,json\" --exec \"ts-node caminhao.ts\"",
+    "gerente": "ts-node gerente.ts\"",
     "build": "tsc",
     "start": "node ./dist/index.js"
   },
@@ -21,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "inquirer": "^8.2.4",
     "mqtt": "^4.3.7",
     "prompt-sync": "^4.2.0",
     "typescript": "^4.7.3",
